Add existing project files to Git

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.13
+  firebase_database: ^10.1.1
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.4.2
+  cloud_firestore: ^4.5.2
+  firebase: ^9.0.2
 
 dev_dependencies:
   flutter_test:
